# DataChain

./: README.md
DataChain-AI/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml
DataChain-AI/ai-engine/: Dockerfile  requirements.txt
DataChain-AI/ai-engine/src/: app.py
DataChain-AI/backend/: Dockerfile  package.json
DataChain-AI/backend/src/: app.js
DataChain-AI/backend/src/config/: index.js
DataChain-AI/contracts/: Cargo.toml
DataChain-AI/contracts/src/: ai_models.rs  data_marketplace.rs  data_token.rs  errors.rs  governance.rs  lib.rs
DataChain-AI/docs/: architecture.md  tokenomics.md
DataChain-AI/frontend/: package.json
DataChain-AI/frontend/src/: App.js  index.css
DataChain-AI/frontend/src/components/layout/: Footer.js  Navbar.js
DataChain-AI/scripts/: deploy_token.js  setup_marketplace.js
