[package]
name = "datachain-ai"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for DataChain AI platform"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "datachain_ai"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.0"
borsh-derive = "0.10.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
arrayref = "0.3.7"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.21.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3 